--- a/skeleton.css
+++ b/skeleton.css
@@ -157,11 +157,15 @@ p {
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-a {
-  color: #1EAEDB; }
+/* a {
+  color: #1EAEDB; } */
 a:hover {
   color: #0FA0CE; }
 
+a:active {
+color: #002776;
+
+}
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
